// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL hLGqxb MNiHh"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX AqBSD dagDTf"
    >
      <p
        className="sc-bdnxRM jtOdAA"
      >
        
      </p>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX kTCDAs cPNXGW"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL jfKDDI DebateStepPageVote___StyledButton-gxOSUk jhmZfJ"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG YEdiR fZkSKg AMDLx icon"
          />
          global.for
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnxRM LoginOverlay__PopoverContainer-jXpOVX lhlbgG dibtT"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnxRM LoginOverlay__Arrow-jnMMdg eRHiAV ICvob"
            style={
              Object {
                "bottom": "100%",
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(360deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnxRM kGlejw"
          >
            <p
              className="sc-bdnxRM gCefO"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX eSWkNp cbVHFV"
            >
              <p
                className="sc-bdnxRM iwmYLL"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnxRM hptjof"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnxRM Button__ButtonInner-dWPVNG hhCGPX jfKDDI"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL jfKDDI DebateStepPageVote___StyledButton2-gycKnS dYDflg"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG YEdiR fZkSKg AMDLx icon"
          />
          global.against
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnxRM LoginOverlay__PopoverContainer-jXpOVX lhlbgG dibtT"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnxRM LoginOverlay__Arrow-jnMMdg eRHiAV ICvob"
            style={
              Object {
                "bottom": "100%",
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(360deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnxRM kGlejw"
          >
            <p
              className="sc-bdnxRM gCefO"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX eSWkNp cbVHFV"
            >
              <p
                className="sc-bdnxRM iwmYLL"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnxRM hptjof"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnxRM Button__ButtonInner-dWPVNG hhCGPX jfKDDI"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly when argumented 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL hLGqxb MNiHh"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX hjHJnk"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
          role="img"
        >
          🎉
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-debate-richer",
            }
          }
        />
        <button
          className="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX KSjKw fvBSZY"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
          allowFullScreen={true}
          frameBorder="0"
          height="20"
          scrolling="no"
          src="https://www.facebook.com/plugins/share_button.php?href=/debate/pour-ou-contre&layout=button_count&size=small&width=91&height=20&appId"
          style={
            Object {
              "border": "none",
              "overflow": "hidden",
            }
          }
          title="facebook share button"
          width="91"
        />
        <a
          className="twitter-share-button"
          data-show-count="false"
          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        >
          Tweet
        </a>
        <button
          aria-describedby="id-1"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fVKHUK jfKDDI"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG cyHrtp cIIQlv AMDLx icon"
          />
          global.link
        </button>
        <div
          className="cap-tooltip"
          hidden={true}
          id="id-1"
          onAnimationEnd={[Function]}
          onTransitionEnd={[Function]}
          role="tooltip"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "pointerEvents": "none",
              "position": "fixed",
              "top": "100%",
              "zIndex": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on desktop renders correctly when voted 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL hLGqxb dlsZIf"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX hjHJnk"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
          role="img"
        >
          🗳️
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-your-vote",
            }
          }
        />
        <button
          className="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnxRM inHOUp DebateStepPageVoteForm___StyledCard-fgMgDs eazeOX"
      >
        <form
          className="DebateStepPageVoteForm__Form-kqneNm jEFxSi"
          disabled={false}
          id="debate-argument-form"
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <textarea
              aria-describedby="label-body "
              aria-invalid={false}
              autoComplete="off"
              autoFocus={false}
              className="form-control"
              id="body"
              minLength="1"
              name="body"
              onBlur={[Function]}
              onChange={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              placeholder="why-are-you-against"
              type="textarea"
              value=""
              warnings={null}
            />
            <div
              className="Notepad__Container-inQLrC cTBqFb visible-print-block"
            >
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
              <span />
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL jlRppZ MNiHh"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX AqBSD dagDTf"
    >
      <p
        className="sc-bdnxRM jtOdAA"
      >
        
      </p>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX kTCDAs cPNXGW"
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL jfKDDI DebateStepPageVote___StyledButton-gxOSUk jhmZfJ"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG YEdiR fZkSKg AMDLx icon"
          />
          global.for
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnxRM LoginOverlay__PopoverContainer-jXpOVX lhlbgG dibtT"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnxRM LoginOverlay__Arrow-jnMMdg bGinxx cBAwUK"
            style={
              Object {
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "top": "100%",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(180deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnxRM kGlejw"
          >
            <p
              className="sc-bdnxRM gCefO"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX eSWkNp cbVHFV"
            >
              <p
                className="sc-bdnxRM iwmYLL"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnxRM hptjof"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnxRM Button__ButtonInner-dWPVNG hhCGPX jfKDDI"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
        <button
          aria-controls="popover-overlay"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fXAuOL jfKDDI DebateStepPageVote___StyledButton2-gycKnS dYDflg"
          onClick={[Function]}
          onClickCapture={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG YEdiR fZkSKg AMDLx icon"
          />
          global.against
        </button>
        <div
          aria-label="vote.popover.title"
          className="sc-bdnxRM LoginOverlay__PopoverContainer-jXpOVX lhlbgG dibtT"
          data-dialog={true}
          hidden={true}
          id="login-popover"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "position": "fixed",
              "top": "100%",
            }
          }
          tabIndex={0}
        >
          <div
            className="sc-bdnxRM LoginOverlay__Arrow-jnMMdg bGinxx cBAwUK"
            style={
              Object {
                "fontSize": 30,
                "height": "1em",
                "pointerEvents": "none",
                "top": "100%",
                "width": "1em",
              }
            }
          >
            <svg
              style={
                Object {
                  "transform": "rotateZ(180deg)",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                className="stroke"
                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
              />
              <path
                className="fill"
                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
              />
            </svg>
          </div>
          <div
            className="sc-bdnxRM kGlejw"
          >
            <p
              className="sc-bdnxRM gCefO"
            >
              vote.popover.title
            </p>
            <div
              className="sc-bdnxRM Flex___StyledAppBox-RSPpX eSWkNp cbVHFV"
            >
              <p
                className="sc-bdnxRM iwmYLL"
              >
                vote.popover.body
              </p>
              <span
                className="sc-bdnxRM hptjof"
                clip="rect(0px, 0px, 0px, 0px)"
              >
                <button
                  className="sc-bdnxRM Button__ButtonInner-dWPVNG hhCGPX jfKDDI"
                  onClick={[Function]}
                  type="button"
                >
                  global.close
                </button>
              </span>
              <span
                style={Object {}}
              >
                <button
                  aria-label="open.connection_modal"
                  className="center-block btn-block login-button btn btn-success"
                  destination="http://localhost"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  global.login
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly when argumented 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL hLGqxb MNiHh"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX hjHJnk"
      >
        <span
          aria-label="vote"
          className="DebateStepPageVoteForm___StyledSpan2-llFVim coOvRu"
          role="img"
        >
          🎉
        </span>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "thanks-for-debate-richer",
            }
          }
        />
        <button
          className="sc-bdnxRM Button__ButtonInner-dWPVNG jyZEiW fLviuu"
          onClick={[Function]}
          type="button"
        >
          delete.vote.against
        </button>
      </div>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX KSjKw fvBSZY"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
          allowFullScreen={true}
          frameBorder="0"
          height="20"
          scrolling="no"
          src="https://www.facebook.com/plugins/share_button.php?href=/debate/pour-ou-contre&layout=button_count&size=small&width=91&height=20&appId"
          style={
            Object {
              "border": "none",
              "overflow": "hidden",
            }
          }
          title="facebook share button"
          width="91"
        />
        <a
          className="twitter-share-button"
          data-show-count="false"
          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        >
          Tweet
        </a>
        <button
          aria-describedby="id-1"
          className="sc-bdnxRM Button__ButtonInner-dWPVNG fVKHUK jfKDDI"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          <IconMock
            className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG cyHrtp cIIQlv AMDLx icon"
          />
          global.link
        </button>
        <div
          className="cap-tooltip"
          hidden={true}
          id="id-1"
          onAnimationEnd={[Function]}
          onTransitionEnd={[Function]}
          role="tooltip"
          style={
            Object {
              "display": "none",
              "left": "100%",
              "pointerEvents": "none",
              "position": "fixed",
              "top": "100%",
              "zIndex": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DebateStepPageAbsoluteVoteAndShare /> when the query is on mobile renders correctly when voted 1`] = `
<div
  className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox-hAjSFL jlRppZ MNiHh"
>
  <div
    className="sc-bdnxRM DebateStepPageAbsoluteVoteAndShare___StyledAppBox2-cwZKRh  hIdYPX container"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX hjHJnk"
      >
        <p
          className="sc-bdnxRM PLHLg"
        >
          <span
            aria-label="vote"
            className="DebateStepPageVoteForm___StyledSpan-bElaUw jzKwr"
            role="img"
          >
            🗳️
          </span>
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "thanks-for-your-vote",
              }
            }
          />
        </p>
      </div>
      <button
        className="sc-bdnxRM Button__ButtonInner-dWPVNG hgJMSO kFclcg"
        onClick={[Function]}
        type="button"
      >
        publish-argument
      </button>
    </div>
  </div>
</div>
`;
